--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script src="main.js"></script>
+
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
@@ -14,7 +18,7 @@
 </head>
 <body>
 
-<h1>~ ~ ~ water ~ water ~ water ~ ~ ~</h1>
+<h1><span> ~ </span> <span> ~ </span> <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span> <span> ~ </span> <span> ~ </span></h1>
 
 </body>
 </html>
