--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="style.css">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
     <script src="main.js"></script>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<h1><span> ~ </span> <span> ~ </span> <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span> <span> ~ </span> <span> ~ </span></h1>
+<h1 id="title"><span> ~ </span> <span> ~ </span> <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span> <span> ~ </span> <span> ~ </span></h1>
 
 </body>
 </html>
