--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
 
 <h1 id="title"><span> ~ </span> <span> ~ </span> <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span> <span> ~ </span> <span> ~ </span></h1>
 
+<div id="jam"></div>
+
 </body>
 </html>
