oh so much more beauty

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Anders Kitson</title>
-    <meta name="description" content="">
+    <meta name="description" content="Anders Kitson waterfalls under your dress.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -20,7 +20,11 @@
 
 <h1 id="title"><span> ~ </span> <span> ~ </span> <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span> <span> ~ </span> <span> ~ </span></h1>
 
-<div id="jam"></div>
+<div title="diamonds anders kitson" id="jam"></div>
+
+<div title="water dolphin babe anders kitson" id="dolphin">
+
+</div>
 
 </body>
 </html>
