--- a/index.html
+++ b/index.html
@@ -22,5 +22,16 @@
 
 <div id="jam"></div>
 
+<div id="guyBody">
+    <img class="guy" src="img/guy.png">
+    <img class="guy" src="img/guy.png">
+    <img class="guy" src="img/guy.png">
+    <img class="guy" src="img/guy.png">
+    <img class="guy" src="img/guy.png">
+    <img class="guy" src="img/guy.png">
+</div>
+
+
+
 </body>
 </html>
