i love you update

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <img class="guy" src="img/guy.png">
 </div>
 
+<p>I <img src="img/love.jpg"> U</p>
+<p> I <img src="img/love.jpg"> Me</p>
+<p>Do you dance? <img src="img/dance.gif"</p>
+
 
 
 </body>
