--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 </div>
 
 <p>I <img src="img/love.jpg"> U</p>
-<p> I <img src="img/love.jpg"> Me</p>
-<p>Do you dance? <img src="img/dance.gif"</p>
+<!--<p>Do you dance? <img src="img/dance.gif"</p>-->
 
 
 
