added hamburger interaction

--- a/index.html
+++ b/index.html
@@ -19,25 +19,42 @@
 </head>
 <body>
 
-<h1 id="title"><span> ~ </span> <span> ~ </span> <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span> <span> ~ </span> <span> ~ </span></h1>
-<h2>Lil Water on your sofa, lil bit water dripping on your skrtt. Lil water in your cup, just a lil water on your face.</h2>
-<div title="diamonds anders kitson" id="jam"></div>
+<nav>
+    <a id="menu" href="#"><img src="img/hamburger.jpeg"></a>
+</nav>
 
-<div title="water dolphin babe anders kitson" id="dolphin">
+<div class="show">
+
+    <h1>yo@anderskitson.com</h1>
+    <h2>Let's make some internet</h2>
 
 </div>
 
-<div id="guyBody">
-    <img class="guy" src="img/guy.png">
-    <img class="guy" src="img/guy.png">
-    <img class="guy" src="img/guy.png">
-    <img class="guy" src="img/guy.png">
-    <img class="guy" src="img/guy.png">
-    <img class="guy" src="img/guy.png">
+<div class="hide">
+
+    <h1 id="title"><span> ~ </span> <span> ~ </span> <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span> <span> ~ </span> <span> ~ </span></h1>
+    <h2>Lil Water on your sofa, lil bit water dripping on your skrtt. Lil water in your cup, just a lil water on your face.</h2>
+    <div title="diamonds anders kitson" id="jam"></div>
+
+    <div title="water dolphin babe anders kitson" id="dolphin">
+
+    </div>
+
+    <div id="guyBody">
+        <img class="guy" src="img/guy.png">
+        <img class="guy" src="img/guy.png">
+        <img class="guy" src="img/guy.png">
+        <img class="guy" src="img/guy.png">
+        <img class="guy" src="img/guy.png">
+        <img class="guy" src="img/guy.png">
+    </div>
+
+    <p>I <img src="img/love.jpg"> U</p>
+    <!--<p>Do you dance? <img src="img/dance.gif"</p>-->
+
 </div>
 
-<p>I <img src="img/love.jpg"> U</p>
-<!--<p>Do you dance? <img src="img/dance.gif"</p>-->
+
 
 
 
