swap click not working

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <nav>
-    <a id="menu" href="#"><img src="img/hamburger.jpeg"></a>
+    <a id="menu" class="imgSwap" href="#"><img src="img/hamburger.jpeg"></a>
 </nav>
 
 <div class="show">
