--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
     <script src="main.js"></script>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -19,41 +17,16 @@
 </head>
 <body>
 
-<nav>
-    <a id="menu" class="imgSwap" href="#"><img src="img/hamburger.jpeg"></a>
-</nav>
 
-<div class="show">
-
-    <h1>yo@anderskitson.com</h1>
-    <h2>Let's make some internet</h2>
-
+    <div>
+        _
+     __| |__
+    [__   __]
+       | |
+       | |
+       | |
+       '-'
 </div>
-
-<div class="hide">
-
-    <h1 id="title"><span> ~ </span> <span> ~ </span> <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span>WA̯̹͝T̼̀E̴̪̳ͅͅR̰̯̤̭ <span> ~ </span> <span> ~ </span> <span> ~ </span></h1>
-    <h2>Lil Water on your sofa, lil bit water dripping on your skrtt. Lil water in your cup, just a lil water on your face.</h2>
-    <div title="diamonds anders kitson" id="jam"></div>
-
-    <div title="water dolphin babe anders kitson" id="dolphin">
-
-    </div>
-
-    <div id="guyBody">
-        <img class="guy" src="img/guy.png">
-        <img class="guy" src="img/guy.png">
-        <img class="guy" src="img/guy.png">
-        <img class="guy" src="img/guy.png">
-        <img class="guy" src="img/guy.png">
-        <img class="guy" src="img/guy.png">
-    </div>
-
-    <p>I <img src="img/love.jpg"> U</p>
-    <!--<p>Do you dance? <img src="img/dance.gif"</p>-->
-
-</div>
-
 
 
 
