--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Anders Kitson waterfalls under your dress.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="main.js"></script>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -18,15 +17,32 @@
 <body>
 
 
-    <div>
-        _
-     __| |__
-    [__   __]
-       | |
-       | |
-       | |
-       '-'
-</div>
+    <table>
+
+
+            <tr>
+
+                <td>
+
+                    <pre>
+
+                    _
+                 __| |__
+                [__   __]
+                   | |
+                   | |
+                   | |
+                   '-'
+
+                </pre>       
+
+                </td>
+
+            </tr>
+
+
+    </table>
+
 
 
 
